--- a/notes.org
+++ b/notes.org
@@ -820,20 +820,7 @@ utiliser pr_list keyword applique a la liste des mots clefs, ou autre pour affic
 
 - [X] Supprimer pr_equality_scheme_type
 
-** DOING centraliser plus de choses dans ind_tables 
-
-** TODO Tableau des schemes
-faire un tableau avec les schemes existant et changer tous les match with avec des iter.
-dans ind_tables
-
-#+begin_src coq
-Inductive nat : Set :=  O : nat | S : nat -> nat.
-
-Register Scheme nat_rect as rec_dep for hoho.
-
-#+end_src
-
-** TODO centraliser plus de choses dans ind_tables : 
+** DOING centraliser plus de choses dans ind_tables : 
 
 actuelllement il y a plusieur sort de schema : interne et schema scheme, e y en a qui sont les deux comme equality et boolean equality
 une tech pour faire des schemes : do scheme
@@ -845,6 +832,13 @@ define_individual_scheme_base : kind devient une liste de string
 - [ ] Tableau des schemes
 faire un tableau avec les schemes existant et changer tous les match with avec des iter.
 dans ind_tables
+
+#+begin_src coq
+Inductive nat : Set :=  O : nat | S : nat -> nat.
+
+Register Scheme nat_rect as rec_dep for hoho.
+
+#+end_src
 
 ** TODO indschemes 
 
@@ -863,6 +857,16 @@ verifier les msg
 
 declare_beq_scheme_gen devient declare scheme gen
 define mutual scheme : c est just ca que va faire do scheme, avec peut etre le try declare scheme autour.
+
+- [ ] supprimer make_suff et rendre suff obligatoir
+key = string list avec maj
+suff = string sans maj et avec underscore
+
+- [ ] supprimer sch_isdep, sch_isrec, scheme_suffix_gen, name_and_process_scheme
+
+** indtables
+
+clef de la table devient (string list * Term.sort_familly option)
 
 ** Questions 
 
